# media-marketing-gen-api

./: .env  LICENSE  README.md  developer-guide.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  release-notes.md
backend/: .gitignore  Dockerfile  README.md  get-pip.py  prestart.sh  pyproject.toml
backend/app/: alembic.ini  backend_pre_start.py  initial_data.py  main.py  tests_pre_start.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 195a08c32bc7_v1_baseline.py
backend/app/api/: deps.py  exception_handlers.py  main.py  message_utils.py
backend/app/api/routes/: chat_logs.py  chat_sessions.py  tenants.py  users.py
backend/app/core/: config.py  db.py  init_db.py  models.py  security.py
backend/app/core/schemas/: __init__.py  api.py  chat_log.py  chat_session.py  field_validators.py  tenant.py  user.py
backend/app/crud/: __init__.py  base.py
backend/app/exceptions/: __init__.py  exception_base.py
backend/app/exceptions/model_exceptions/: db_exceptions.py  user_exceptions.py
backend/app/logs/: logger.py
backend/app/logs/config/: __init__.py  config.yml  data_filter.py
backend/app/tests/: conftest.py  test_base.py  test_db.py
backend/app/tests/api/: api_test_base.py
backend/app/tests/api/routes/: test_chat_logs.py  test_chat_sessions.py  test_tenants.py  test_users.py
backend/app/tests/crud/: crud_test_base.py
backend/app/tests/crud/crud_models/: test_chat_logs.py  test_chat_sessions.py  test_tenants.py  test_users.py
backend/app/tests/utils/: __init__.py  chat_logs.py  chat_sessions.py  tenants.py  users.py  utils.py
